# wartest

./: .gitignore  AI_GAME_ANALYTICS_PLAN.md  COMPLETE_PROJECT_STRUCTURE_TREE.md  CURRENT_STATUS.md  Cargo.toml  DIRECTORY_TREE_WITH_SUMMARIES.md  FOLDER_STRUCTURE_SUMMARY.md  LEGACY_MAP_SYSTEM_ANALYSIS.md  MAP_EXTRACTION_IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  MULTIPLAYER_ANALYSIS.md  PHASE_2_IMPLEMENTATION_PLAN.md  PROJECT_APPS_OVERVIEW.md  PROJECT_ARCHITECTURE.md  PROJECT_STRUCTURE_SUMMARY.md  QUICK_FOLDER_OVERVIEW.md  README.md  TMapX-Launcher.bat  UPDATED_PROJECT_STRUCTURE_SUMMARY.md  WARCRAFT_2_MAP_PARSING_UPDATE.md  build_tmapx.bat  config_analysis.json  create_shortcut.bat  game_results_test.json  index.html  multiplayer_data_test.json  package-lock.json  package.json  test_wc1.rs  tsconfig.json
TMapX/: .gitignore  MAP_PARSING_KNOWLEDGE_BASE.md  MULTI_LEVEL_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  TEXTURE_BASED_RENDERING_IMPLEMENTATION.md  binary_parser.js  binary_parser_fixed.js  build_tmapx.bat  build_tmapx_robust.bat  enhanced_map_renderer.html  index.html  package-lock.json  package.json  texture_manager.js  timapx_new.js
TMapX/map-extraction-backend/: Cargo.toml  tauri.conf.json
TMapX/src/: App.svelte  main.ts  styles.css
W3ChampAnalysis/: FINAL_SUMMARY.md  SUMMARY.md
W3ChampAnalysis/tools/: network_analyzer.py  requirements.txt
W3ChampAnalysis/tools/rust_integration/: Cargo.toml
W3ChampAnalysis/tools/rust_integration/src/: communication.rs  data_structures.rs  hooking.rs  utils.rs
WC2Lab/: CURRENT_STATUS.md  CUSTOM_GAME_BUILD_PLAN.md  PHASE_2_IMPLEMENTATION_PLAN.md  README.md  test_ai_agent.rs  test_config.toml
WC2Lab/WC2AI/: Cargo.toml
WC2Lab/WC2AI/src/: input_simulator.rs  main.rs  replay_system.rs  test.rs
WC2Lab/custom_wc2_build/: analysis_report.md
WC2Lab/src/: analysis.rs  core.rs  events.rs  game_state.rs  lib.rs  main.rs  utils.rs
WC2Replays/: Cargo.toml
WC2Replays/src/decoder/: mod.rs  parser.rs
WC2Replays/src/viewer/: viewer_app.rs
WCACore/src/: index.html  main.js
WCACore/src-tauri/: Cargo.toml  tauri.conf.json
WCArenaGameScanner/: index.html  package.json  vite.config.ts
WCArenaGameScanner/src/: app.css  web_analyzer.rs
WCArenaGameScanner/wc-arena-scanner-backend/: Cargo.toml  tauri.conf.json
WCArenaMapExtractor/: README.md  package.json
WCArenaMapExtractor/map-extraction-backend/: Cargo.toml  tauri.conf.json
WCArenaMapExtractor/src/: App.svelte
games/WC1/game-analyzer/: Cargo.toml
games/WC1/game-analyzer/src/: analyzer.rs  game_data.rs
games/WC1/shared/: Cargo.toml
games/WC1/shared/src/: asset_utils.rs
games/WC2/replay-system/: Cargo.toml
games/WC2/replay-system/WC2Replays/analysis/: real_game_analysis.md
games/WC2/replay-system/WC2Replays/src/: structures.rs
games/WC2/replay-system/WC2Replays/src/decoder/: events.rs  game_state.rs
games/WC2/replay-system/src/: analyzer.rs  lib.rs  main.rs
games/WC2/replay-system/src/emulator/: assets.rs  renderer.rs
games/WC2/replay-system/src/viewer/: replay_player.rs  ui_components.rs  viewer_app.rs
headless_wc2/: Cargo.toml
headless_wc2/src/: ai_controller.rs  data_exporter.rs  function_hooks.rs  game_engine.rs  lib.rs  main.rs  memory_hooks.rs  replay_system.rs  test.rs
headlessgames/wc2-remastered-lab/: CURRENT_STATUS.md  Cargo.toml  HEADLESS_VERSION_PLAN.md  PHASE_2_IMPLEMENTATION_PLAN.md  README.md  TESTING_GUIDE.md  TESTING_STATUS.md  test_ai_agent.rs
headlessgames/wc2-remastered-lab/custom_wc2_build/: QUICK_START_ANALYSIS.md  analysis_report.md
headlessgames/wc2-remastered-lab/custom_wc2_build/tools/: CMakeLists.txt  analyze_wc2.py  start_analysis.bat
headlessgames/wc2-remastered-lab/headless_wc2/: Cargo.toml
headlessgames/wc2-remastered-lab/headless_wc2/src/: ai_controller.rs  data_exporter.rs  function_hooks.rs  game_engine.rs  input_simulator.rs  lib.rs  main.rs  memory_hooks.rs
headlessgames/wc2-remastered-lab/output/wc2-lab-1756035203/: session_summary.json
headlessgames/wc2-remastered-lab/output/wc2-lab-1756046486/: session_summary.json
headlessgames/wc2-remastered-lab/output/wc2-lab-1756047711/: session_summary.json
headlessgames/wc2-remastered-lab/output/wc2-lab-1756047733/: analysis_results.json  session_summary.json
headlessgames/wc2-remastered-lab/output/wc2-lab-1756050625/: analysis_results.json
headlessgames/wc2-remastered-lab/output/wc2-lab-1756051607/: session_summary.json
headlessgames/wc2-remastered-lab/src/: ai_agent.rs  custom_game_builder.rs  lib.rs  main.rs  memory.rs  process.rs
map-extraction/: README.md  index.html  package-lock.json  package.json
shared/ai/: Cargo.toml
shared/ai/src/: game_analysis.rs  lib.rs  pattern_recognition.rs
shared/core/: Cargo.toml
shared/core/src/: game_engine.rs  lib.rs  memory_hooks.rs  process_monitor.rs
shared/database/: Cargo.toml
shared/utils/: Cargo.toml
shared/utils/src/: asset_extraction.rs  binary_parser.rs  file_ops.rs  lib.rs
src/: App.svelte  main.rs  wc1_extractor.rs  wc2_extractor.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/asset_extractors/: mod.rs  (+1 more)
tauriapp/: DEBUGGING_AND_TESTING_PLAN.md  ERROR_ANALYSIS_AND_TESTING_STRATEGY.md  README.md  SYSTEM_TRAY_DEBUGGING.md  SYSTEM_TRAY_STATUS.md  TESTING_FRAMEWORK.md  build.bat  dev.bat  frontend_tests.js  index.html  settings.html  status.html  system_tray_implementation.md  system_tray_test.rs
tools/: README.md
tools/WC2/asset-extractor/: Cargo.toml
tools/WC2/asset-extractor/src/: utils.rs
tools/WC3/multiplayer-monitor/: Cargo.toml
tools/oldTauriReference/wcacore/src-tauri/: Cargo.toml
tools/oldTauriReference/wcacore/src-tauri/src/: game_manager.rs  main.rs
wartest-monitor/: README.md  index.html  settings.html  status.html  system_tray_example.rs  tray.html
wartest-monitor/src-tauri/: Cargo.toml  tauri.conf.json
wartest-monitor/src-tauri/src/: game_monitor.rs  lib.rs  main.rs  platform.rs  server_client.rs  types.rs
wc2-desktop-manager/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
wc2-desktop-manager/src-tauri/src/: main.rs
(+506 files in other folders)
