[workspace]
resolver = "2"
members = [
    # Shared libraries
    "shared/core",
    "shared/utils", 
    "shared/ai",
    
    # Main Tauri application
    "src-tauri", "headlessgames/wc2-remastered-lab",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Warcraft Game Analysis and Management System"
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# File and binary processing
byteorder = "1.4"
walkdir = "2.3"
notify = "6.1"
hex = "0.4"
crc = "3.3"
flate2 = "1.0"
zstd = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# GUI and UI
eframe = "0.26"
egui = "0.26"
egui_plot = "0.26"

# Windows API (for process monitoring)
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_SystemInformation"
]}

# AI and ML
tch = "0.10"  # PyTorch bindings - compatible with rust-bert
rust-bert = "0.20"  # BERT models for text analysis
