[package]
name = "headless-wc2"
version = "0.1.0"
edition = "2021"
authors = ["WC2 AI Laboratory"]
description = "Headless version of Warcraft II Remastered with AI integration"
license = "MIT"

[dependencies]
# Core system dependencies
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Windows API for process and memory manipulation
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
]}

   # Data processing and analysis
   bincode = "1.3"
   byteorder = "1.4"
   nom = "7.1"
   hex = "0.4"
   md5 = "0.7"
   rand = "0.8"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"
crossbeam = "0.8"

# Web dashboard (optional)
warp = "0.3"
tower = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "headless-wc2"
path = "src/main.rs"

[[bin]]
name = "headless-wc2-test"
path = "src/test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
