[package]
name = "wc2-remastered-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
        # Core system dependencies
        windows = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
        serde = { version = "1.0", features = ["derive"] }
        serde_json = "1.0"
        tokio = { version = "1.0", features = ["full"] }
        anyhow = "1.0"
        thiserror = "1.0"
        log = "0.4"
        env_logger = "0.10"
        chrono = { version = "0.4", features = ["serde"] }

        # Data analysis and processing
        byteorder = "1.4"
        nom = "7.1"

        # Game-specific data structures
        bincode = "1.3"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "test_ai_agent"
path = "test_ai_agent.rs"
