[package]
name = "shared-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared utility functions and helpers"
license.workspace = true

[dependencies]
# Core dependencies (from workspace)
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

# File and binary processing
byteorder = "1.4"
walkdir = "2.3"
notify = "6.1"
hex = "0.4"
crc = "3.3"

# Hashing
sha2 = "0.10"
md5 = "0.7"

# Image processing
image = "0.24"

[lib]
name = "shared_utils"
path = "src/lib.rs"
