[package]
name = "wcarena-monitor"
version = "0.1.0"
description = "WCArena - Warcraft II Multiplayer Game Monitor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = ["unstable"] }
tauri-plugin-log = "2.6.0"

# Game monitoring dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Windows API for process monitoring
winapi = { version = "0.3", features = [
    "winuser", 
    "processthreadsapi", 
    "memoryapi", 
    "handleapi", 
    "errhandlingapi", 
    "psapi"
] }

# File system and I/O
walkdir = "2.4"

# Networking for Battle.net monitoring
socket2 = "0.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = "2.0"

# Threading
parking_lot = "0.12"

# HTTP client for server communication
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# System tray support via tray-icon crate
tray-icon = "0.21.1"


