[package]`nname = "wc2-desktop-manager"`nversion = "0.0.0"`ndescription = "WC2 Desktop Manager - Unified Warcraft II Management Center"`nauthors = ["you"]`nlicense = ""`nrepository = ""`nedition = "2021"`n`n[[bin]]`nname = "wc2-desktop-manager"`npath = "src/main.rs"`n`n[build-dependencies]`ntauri-build = { version = "2.0.0", features = [] }`n`n[dependencies]`ntauri = { version = "2.0.0", features = ["shell-open"] }`nserde = { version = "1.0", features = ["derive"] }`nserde_json = "1.0"`ntokio = { version = "1.0", features = ["full"] }`nanyhow = "1.0"`n`n[features]`ncustom-protocol = ["tauri/custom-protocol"]
