[package]
name = "w3c-rust-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
# Windows API bindings
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_IO"
]}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# WebSocket support
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Memory manipulation
memmap2 = "0.9"

# Pattern matching
aho-corasick = "1.0"

# Cryptography
sha2 = "0.10"
crc32fast = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Cross-platform
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "memoryapi",
    "psapi",
    "tlhelp32",
    "handleapi",
    "errhandlingapi",
    "synchapi",
    "winbase",
    "debugapi",
    "libloaderapi"
]}

[lib]
name = "w3c_integration"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "w3c-injector"
path = "src/bin/injector.rs"

[[bin]]
name = "w3c-monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "w3c-server"
path = "src/bin/server.rs"
