[package]
name = "wc1-game-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Warcraft I Game Analysis System"
license.workspace = true

[dependencies]
# Core dependencies (from workspace)
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

# File and binary processing
byteorder = "1.4"
walkdir = "2.3"
notify = "6.1"
hex = "0.4"
crc = "3.3"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Hashing
sha2 = "0.10"
md5 = "0.7"

[[bin]]
name = "wc1-game-analyzer"
path = "src/main.rs"

[lib]
name = "wc1_game_analyzer"
path = "src/lib.rs"
