[package]
name = "headless-wc2"
version = "1.0.0"
edition = "2021"
authors = ["AI Laboratory Team"]
description = "Headless Warcraft II Remastered with AI Control and Analytics"
license = "MIT"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
md5 = "0.7"
rand = "0.8"

# Windows API for real game integration
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging"
]}

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "headless-wc2"
path = "src/main.rs"

[[bin]]
name = "headless-wc2-test"
path = "src/test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
