[package]
name = "wc2-asset-extractor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Warcraft II Asset Extraction System"
license.workspace = true

[dependencies]
# Core dependencies (from workspace)
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

# File and binary processing
byteorder = "1.4"
walkdir = "2.3"
notify = "6.1"
hex = "0.4"
crc = "3.3"

# Image processing
image = "0.24"
png = "0.17"

# Audio processing
hound = "3.5"
ogg = "0.8"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Hashing
sha2 = "0.10"
md5 = "0.7"

# Progress bars
indicatif = "0.17"

[[bin]]
name = "wc2-asset-extractor"
path = "src/main.rs"

[lib]
name = "wc2_asset_extractor"
path = "src/lib.rs"
